--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'application'
 
 group 'net.itconcepts'
 version '0.1'
-mainClassName = 'net.itconcepts.training.LeagueManagerShell'
+mainClassName = 'net.itconcepts.training.LeagueManagerBootstrap'
 
 sourceCompatibility = 1.8
 
@@ -17,12 +17,3 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-/*
-jar {
-    manifest {
-        attributes(
-                'Class-Path' : configurations.runtime.collect { it.getName() }.join(' ')
-        )
-    }
-}
- */
